@@ -27,6 +27,7 @@ consequences = [
     'floating',
     'floating_geometry',
     'pseudotile',
+    'sticky',
     'ewmhrequests',
     'ewmhnotify',
     'fullscreen',
@@ -391,7 +392,7 @@ def create_client(hlwm, rule_mode: RuleMode, rule):
 
 @pytest.mark.parametrize(
     'name',
-    ['floating', 'pseudotile', 'fullscreen', 'ewmhrequests', 'ewmhnotify', 'fullscreen'])
+    ['floating', 'pseudotile', 'fullscreen', 'ewmhrequests', 'ewmhnotify', 'fullscreen', 'sticky'])
 @pytest.mark.parametrize('value', [True, False])
 @pytest.mark.parametrize('rule_mode', RuleMode.values)
 def test_bool_consequence_with_corresponding_attribute(hlwm, name, value, rule_mode):
@@ -1070,3 +1071,22 @@ def test_fixedsize(hlwm, hc_idle, x11):
     assert ['rule', 'nofixedsize', win_fixed] not in hooks
     assert ['rule', 'nofixedsize', win_nofixed] in hooks
     assert ['rule', 'fixedsize', win_nofixed] not in hooks
+
+
+def test_sticky_plus_switchtag_rule(hlwm):
+    hlwm.call('add othertag')
+
+    hlwm.call('rule sticky=on tag=othertag switchtag=on focus=on')
+
+    client, _ = hlwm.create_client()
+    clientobj = hlwm.attr.clients[client]
+
+    assert clientobj.sticky() is True
+
+    assert hlwm.attr.tags.focus.focused_client.winid() == client
+
+    hlwm.call('use default')
+    assert hlwm.attr.tags.focus.focused_client.winid() == client
+
+    hlwm.call('use othertag')
+    assert hlwm.attr.tags.focus.focused_client.winid() == client
